--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 
   *{
     box-sizing: border-box;
-    font-family: Lato;
+    font-family: 'Roboto', sans-serif;
     user-select: none;
     text-decoration: none;
      scroll-behavior: smooth;
      color: white;
+     margin: 0;
 
-}
 
 }
 @font-face{
@@ -16,6 +16,101 @@
 
 }
 
+.dots-9 {
+  width:12px;
+  height:12px;
+  position: relative;
+  animation:d9-0 2s infinite steps(2);
+}
+.dots-9::before,
+.dots-9::after {
+  content:"";
+  position: absolute;
+  inset:0;
+  border-radius:50%;
+  background:currentColor;
+}
+.dots-9::before {
+  box-shadow: 24px 0 currentColor;
+  transform:translateX(-24px);
+  animation:d9-1 1s infinite linear alternate;
+}
+.dots-9::after {
+  transform:translateX(12px) rotate(0deg) translateX(12px);
+  animation:d9-2 1s infinite linear alternate;
+}
+@keyframes d9-0 {
+    0% ,49.9% {transform:scale(1)}
+    50%,100%{transform:scale(-1)}
+}
+@keyframes d9-1 {
+    100%{box-shadow: 48px 0 currentColor}
+}
+@keyframes d9-2 {
+    100%{transform:translateX(12px) rotate(-180deg) translateX(12px)}
+}
+
+.fotogh{
+    opacity: 0.9;
+    display: block;
+    margin-top: -5vh;
+    margin-bottom: -15vh;
+    
+}
+
+.habi{
+  opacity: 0.5;
+  font-size: 2vw;
+  display: block;
+  padding-top: 12vh;
+  margin-bottom: -10vh;
+  transition: 1s;
+}
+.exp{
+  margin: 0 auto;
+  margin-top: 15vh;
+  margin-bottom: -8vh;
+  display: block;
+  width: 40%;
+  font-size: 1.5vw;
+  padding: 3px;
+  opacity: 0.6;
+}
+
+.pondeg{ 
+  opacity: 1;
+  display:block;
+  padding: 5vh;
+}
+
+#formacion h1{
+ display: block;
+ margin-top: -4vh;
+ margin-bottom: -2vh;
+}
+
+h6{
+display: block;
+padding-bottom: 3vh;
+}
+h4{
+margin: 2px;
+}
+h5{ 
+margin: 2px;
+}
+h1{
+
+margin: 3px;
+display: block;
+padding-top: 1vh;
+padding-bottom: 1vh;
+}
+
+h2{
+display: block;
+margin: 3px;
+}
 .centrado{
   height: 100vh;
   display: flex;
@@ -101,7 +196,9 @@
 }
 
 .linked{
-  max-width: 90%;
+  display: block;
+  top: 1vh; 
+  padding-top: 1vh;
   width: 80%;
 }
 
@@ -125,7 +222,6 @@ footer{
     background: linear-gradient(10deg, #903749, #2d132c);
     border-radius: 4px;
 }
-
 
 .foot{
   font-size: 26px;
@@ -202,8 +298,12 @@ fieldset a{
 
 }
 #repositorios{
-  padding-bottom: 6cm;
+  padding-bottom: 2vh;
+  padding-top: 10vh;
+  margin-top: -15vh;
 }
+
+
 #repositorios h1{
     margin-top: 3cm;
     opacity: 90%;
@@ -223,6 +323,9 @@ fieldset a{
 
 
 #actividad img{
+    display: block;
+    padding-top: 1vh;
+    top: 1vh;
     max-width: 60%;
     width: 50%;
     border-radius: 100%;
@@ -304,9 +407,20 @@ i:hover{
   font-size: 3em;
 }
 
+#contacto h1{
+display: block;
+padding-bottom: 4vh;
+}
+
+#contacto{
+height: 30vh;
+}
+
 @media screen and (max-width: 800px){
   #contacto{
     display: block;
+    margin-top: -5vh;
+    margin-bottom: 12vh;
     padding-bottom: 1vh;
     max-width: 100%;
   }
@@ -338,11 +452,18 @@ i:hover{
     font-size: 1.8em;
     opacity: 90%;
   }
+  h1{
+ 	font-size: 5em;
+  }
+  
 
   #oe{
     font-size: 2em;
   }
 
+#contacto{
+height: 50vh;
+}
 
   .roll{
     display: block;
@@ -356,4 +477,18 @@ i:hover{
     font-size: 1.3em;
   }
 
+  .exp i{ 
+    display: inline;
+    margin: 0 auto;
+    justify-content: center;
+    text-align: center;
+    font-size: 7em;
+    padding: 3vw;
+    top: 3vh;
+}
+.exp{
+   width: 80%;
+   justify-content:center;
+   text-align: center;
+ }
 }
