--- a/styles.css
+++ b/styles.css
@@ -14,14 +14,26 @@
   margin-bottom: -10vh;
 }
 
+.botones{
+  height: 10vh;
+  padding-top: 2vh;
+  padding-bottom: 10vh;
+  display: block;
+}
 
-.fa-language{
-  font-size: 3em;
+.fa-moon{
+  font-size: 2.5em;
   margin-top: -5vh;
   padding-bottom: 1vh;
-
-
 }
+
+.fa-language{
+  font-size: 2.5em;
+  margin-top: -5vh;
+  padding-bottom: 1vh;
+}
+
+
 @font-face{
     font-family:Lato;
     src:url(fonts/Lato.ttf) ;    position: absolute;
@@ -218,6 +230,20 @@ body{
     color: white;
 }
 
+.bodyLight{
+    background: linear-gradient(90deg, #faf1e6, #fdfaf6);
+    color: black;
+}
+
+.footerLight{
+    background: linear-gradient(10deg, #faf1e6, #fdfaf6);
+    color: black;
+}
+
+.iLight{
+  color: black;
+}
+
 header{
     position: flex;
     padding-bottom: 1.5cm;
@@ -308,22 +334,15 @@ fieldset a{
 
 }
 #repositorios{
-  padding-bottom: 2vh;
-  padding-top: 10vh;
-  margin-top: -15vh;
+  margin-top: 18vh;
 }
 
 
 #repositorios h1{
-    margin-top: 3cm;
+    margin-top: 5vh;
     opacity: 90%;
 }
-#repositorios img{
-    max-width: 200px;
-    display: block;
-    padding-bottom: 3cm;
-    padding-top: 3cm;
-}
+
 
 #repositorios a{
     font-size: 24px;
@@ -380,7 +399,7 @@ i:hover{
 
   width: 100%;
   max-width: 100%;
-  padding-bottom: 40vh;
+  padding-bottom: 30vh;
 
 }
 
