--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,19 @@
 }
 
 .fa-moon{
-  font-size: 2.5em;
+  font-size: 2em;
+  margin-top: -5vh;
+  padding-bottom: 1vh;
+}
+
+.fa-sun{
+  font-size: 2em;
   margin-top: -5vh;
   padding-bottom: 1vh;
 }
 
 .fa-language{
-  font-size: 2.5em;
+  font-size: 2em;
   margin-top: -5vh;
   padding-bottom: 1vh;
 }
@@ -226,23 +232,24 @@ margin: 3px;
 }
 
 body{
+background: linear-gradient(90deg, #fdfaf6, #faf1e6);
+    color: black;
+}
+
+.bodyLight{
+    background: linear-gradient(90deg, #000000, #020101);
+        color: white;
+}
+
+.footerLight{
     background: linear-gradient(90deg, #000000, #020101);
     color: white;
 }
 
-.bodyLight{
-    background: linear-gradient(90deg, #fdfaf6, #faf1e6);
-    color: black;
-}
-
-.footerLight{
-    background: linear-gradient(10deg, #faf1e6, #faf1e6);
-    color: black;
-}
-
 .iLight{
-  color: black;
+  color: white;
 }
+
 
 header{
     position: flex;
@@ -250,16 +257,17 @@ header{
 
 }
 footer{
-    font-size: 26px;
+  font-size: 26px;
   opacity: 85%;
   font-weight: lighter;
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  color: white;
+  color: black;
   text-align: center;
-    background: linear-gradient(10deg, #000000, #070407);  border-radius: 4px;
+  background: linear-gradient(45deg, #fdfaf6, #faf1e6);;
+  border-radius: 4px;
 }
 
 
@@ -385,7 +393,7 @@ i{
     display: line;
     padding: 2vw;
     font-size: 2.5em;
-    color: white;
+    color: black;
     transition: 0.2s;
 
 }
@@ -448,7 +456,6 @@ height: 30vh;
       align-items: center;
       padding: 3vh;
       font-size: 2em;
-      color: white;
   }
 
   #formacion a{
@@ -505,7 +512,7 @@ height: 30vh;
 
  footer{
    font-size: 1.4em;
- }
+  }
 
  .fa-language{
   font-size: 1.8em;
@@ -515,5 +522,12 @@ height: 30vh;
   margin-top: -5vh;
   padding-bottom: 1vh;
 }
+
+.fa-sun{
+  font-size: 1.8em;
+  margin-top: -5vh;
+  padding-bottom: 1vh;
+}
+
 
 }
