--- a/styles.css
+++ b/styles.css
@@ -232,12 +232,12 @@ background: linear-gradient(90deg, #fdfaf6, #faf1e6);
 }
 
 .bodyLight{
-    background: linear-gradient(90deg, #000000, #020101);
+    background: #3C3836;
         color: white;
 }
 
 .footerLight{
-    background: linear-gradient(90deg, #000000, #020101);
+    background: linear-gradient(90deg, #272423, #3C3836);
     color: white;
 }
 
